# harmonizr-dsp

./: ButterworthFilter.cpp  ButterworthFilter.h  ButterworthFilter.hpp  CMakeLists.txt  CircularAudioBuffer.cpp  CircularAudioBuffer.hpp  DSPKernel.hpp  DSPKernel.mm  GranularSynth.cpp  GranularSynth.hpp  Harmonizer.cpp  Harmonizer.hpp  HarmonizerDSPKernel.cpp  HarmonizerDSPKernel.hpp  Looper.cpp  Looper.h  NoiseGate.cpp  NoiseGate.hpp  PitchEstimator.cpp  PitchEstimator.hpp  PitchEstimatorSHS.cpp  PitchEstimatorYIN.cpp  PitchMarker.cpp  PitchMarker.hpp  PulseModel.cpp  PulseModel.hpp  SimplePitchShifter.cpp  SimplePitchShifter.hpp  TestAudioData.h  Util.hpp  Window.cpp  Window.hpp
HarmonizrDsp/HarmonizrDsp.xcodeproj/: project.pbxproj
HarmonizrDsp/HarmonizrDsp.xcodeproj/project.xcworkspace/xcuserdata/matt.xcuserdatad/: UserInterfaceState.xcuserstate
HarmonizrDsp/HarmonizrDsp.xcodeproj/xcuserdata/matt.xcuserdatad/xcschemes/: xcschememanagement.plist
test/: CMakeCache.txt  cmake_install.cmake  common.h  gtest.cc  test_cbuf.cpp  test_gsynth.cpp  test_harmonizer.cpp  test_pitchest.cpp  test_pshifter.cpp  test_pulsegen.cpp  test_window.cpp
